<resources>
    <string name="app_name">Diagnosis</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mobile">Mobile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_reg">Mobile</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">signout</string>
</resources>